<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.samsungocean.appsimples.HomeActivity">

    <EditText
        android:id="@+id/tarefas"
        android:text="@string/tarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dias_da_semana"
        android:text="@string/dias_da_semana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Tarefas"
        android:text="@string/texto_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/d_semana"
        android:text="@string/texto_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner_tarefas"
        android:entries="@array/tipo_de_tarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>

    <Spinner
        android:id="@+id/spinner_d_semana"
        android:entries="@array/dias_da_semana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>

    <Button
        android:id="@+id/btn_registrar"
        android:text="@string/texto_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
